<?xml version="1.0" encoding="utf-8"?><!-- Linear Layout with Lists in Frame Layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_header"
            android:text="@string/main_hdr"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lib_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_header"
            android:text="@string/main_desc"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_artists">

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_artists" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_albums">

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_albums" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_songs">

        <TextView
            android:id="@+id/songs"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_songs" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_purchase">

        <TextView
            android:id="@+id/purchase"
            style="@style/CategoryStyle"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/category_purchase" />
    </FrameLayout>

    <Button
        android:id="@+id/goToNowPlaying"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/button_border"
        android:text="Now Playing" />
</LinearLayout>